--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>Satish's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-
-  <body>
+  <body >
     <table cellspacing="20">
       <tr>
         <td><img src="images/circle-cropped.png" style="width: 140px;height: 140px;" alt="satish profile picture"></td>
